--- a/server/channels/app/worktemplates/templates.yaml
+++ b/server/channels/app/worktemplates/templates.yaml
@@ -10,6 +10,9 @@ description:
     channel:
         id: "worktemplate.product_teams.feature_release.description.channel"
         defaultMessage: "Chat with your team about any release blockers and changes in a channel that connects easily with your boards, playbooks and other integrations."
+    board:
+        id: "worktemplate.product_teams.feature_release.description.board"
+        defaultMessage: "Keep meetings on track with the Meeting Agenda board. Manage your workload with the Project Tasks board."
     playbook:
         id: "worktemplate.product_teams.feature_release.description.playbook"
         defaultMessage: "Boost cross-functional team collaboration with task checklists and automation that support your feature development process. When you’re done, run a retrospective and make improvements for your next release."
@@ -23,6 +26,18 @@ content:
       name: Feature Release
       playbook: product-release-playbook
       illustration: "/static/worktemplates/product_teams/feature_release/channel.png"
+  - board:
+      id: "board-meeting-agenda"
+      template: "54fcf9c610f0ac5e4c522c0657c90602"
+      name: Meeting Agenda
+      channel: feature-release
+      illustration: "/static/worktemplates/boards/meeting_agenda.png"
+  - board:
+      id: "board-project-task"
+      template: "a4ec399ab4f2088b1051c3cdf1dde4c3"
+      name: Project Task
+      channel: feature-release
+      illustration: "/static/worktemplates/boards/project_tasks.png"
   - playbook:
       template: "Product Release"
       name: "Feature release"
@@ -43,6 +58,10 @@ description:
     id: worktemplate.product_teams.goals_and_okrs.channel
     defaultMessage: >-
       Chat about your goals and progress with your team, async or real-time, and stay up to date with changes in a single channel.
+  board:
+    id: worktemplate.product_teams.goals_and_okrs.board
+    defaultMessage: >-
+      Track your team's progress toward organizational goals with the Goals and OKR board. Keep meetings on track with the Meeting Agenda board. 
   integration:
     id: worktemplate.product_teams.goals_and_okrs.integration
     defaultMessage: >-
@@ -100,6 +119,10 @@ description:
     id: worktemplate.product_teams.sprint_planning.channel
     defaultMessage: >-
       Chat with your team in a channel that connects easily with your boards and integrations.
+  board:
+    id: worktemplate.product_teams.sprint_planning.board
+    defaultMessage: >-
+      Track your team's progress toward weekly goals with sprint breakdowns, prioritization, owner assignment, and comments. 
   integration:
     id: worktemplate.product_teams.sprint_planning.integration
     defaultMessage: >-
@@ -110,8 +133,38 @@ content:
       id: channel-1674850783500
       illustration: /static/worktemplates/product_teams/sprint_planning/channel.png
       name: Sprint planning
+  - board:
+      id: board-1674850783973
+      template: 99b74e26d2f5d0a9b346d43c0a7bfb09
+      name: Sprint planning
+      illustration: /static/worktemplates/boards/sprint_planner.png
+      channel: channel-1674850783500
   - integration:
       id: zoom
+---
+id: 'product_teams/product_roadmap:v1'
+category: product_teams
+useCase: Create a product roadmap
+illustration: /static/worktemplates/product_teams/product_roadmap/product_roadmap.png
+visibility: public
+description:
+  channel:
+    id: worktemplate.product_teams.product_roadmap.channel
+    defaultMessage: Chat with your team about your customers' feedback, prioritization, and get aligned on progress together.
+  board:
+    id: worktemplate.product_teams.product_roadmap.board
+    defaultMessage: Use the Product Roadmap board to manage user feedback, assign resources, view deliverables in a calendar view, and prioritize issues.
+content:
+  - channel:
+      id: channel-1674851139450
+      illustration: /static/worktemplates/product_teams/product_roadmap/channel.png
+      name: Product Roadmap
+  - board:
+      id: board-1674851139759
+      template: b728c6ca730e2cfc229741c5a4712b65
+      name: Product Roadmap
+      illustration: /static/worktemplates/boards/roadmap.png
+      channel: channel-1674851139450
 ---
 ######################
 # DEVOPS
@@ -125,6 +178,9 @@ description:
     channel:
         id: "worktemplate.devops.incident_resolution.description.channel"
         defaultMessage: "Chat with your team about priorities, add stakeholders, provide updates, and work toward a resolution in a single channel."
+    board:
+        id: "worktemplate.devops.incident_resolution.description.board"
+        defaultMessage: "Use the Incident Resolution board to support repeatable processes and assign defined tasks across the team."
     playbook:
         id: "worktemplate.devops.incident_resolution.description.playbook"
         defaultMessage: "Use checklists and automation to bring in key team members, and share how your incident is tracking toward resolution."
@@ -139,6 +195,12 @@ content:
       illustration: /static/worktemplates/devops/incident_resolution/channel.png
       name: Incident Resolution
       playbook: irpb
+  - board:
+      id: irb
+      template: a4ec399ab4f2088b1051c3cdf1dde4c3
+      name: Incident Resolution
+      illustration: /static/worktemplates/boards/project_tasks.png
+      channel: irc
 ---
 id: 'devops/product_release:v1'
 category: devops
@@ -149,6 +211,9 @@ description:
   channel:
     id: worktemplate.devops.product_release.channel
     defaultMessage: Chat with your team about daily milestones, any blockers, and changes to deliverables, easily and quickly.
+  board:
+    id: worktemplate.devops.product_release.board
+    defaultMessage: Use the Product Release board to support your release timeframe and process, ensuring everyone knows which tasks are due.
   playbook:
     id: worktemplate.devops.product_release.playbook
     defaultMessage: Create repeatable workflows that are easy to follow and implement so product releases are reliable and on time.
@@ -158,6 +223,12 @@ content:
       template: Product Release
       name: Product Release
       illustration: /static/worktemplates/playbooks/product_release.png
+  - board:
+      id: board-1674851386432
+      template: a4ec399ab4f2088b1051c3cdf1dde4c3
+      name: Product Release
+      illustration: /static/worktemplates/boards/project_tasks.png
+      channel: channel-1674851385983
   - channel:
       id: channel-1674851385983
       illustration: /static/worktemplates/devops/product_release/channel.png
@@ -177,6 +248,10 @@ description:
     id: worktemplate.companywide.goals_and_okrs.channel
     defaultMessage: >-
       Chat about your goals and progress with your team, async or real-time, and stay up to date with changes in a single channel.
+  board:
+    id: worktemplate.companywide.goals_and_okrs.board
+    defaultMessage: >-
+      Track your team's progress toward organizational goals with the Goals and OKR board. Keep meetings on track with the Meeting Agenda board. 
   integration:
     id: worktemplate.companywide.goals_and_okrs.integration
     defaultMessage: >-
@@ -187,6 +262,12 @@ content:
       id: channel-1674845108569
       illustration: /static/worktemplates/companywide/goals_and_okrs/channel.png
       name: Goals and OKR
+  - board:
+      id: board-1674845139258
+      template: 7ba22ccfdfac391d63dea5c4b8cde0de
+      name: Goals and OKR
+      illustration: /static/worktemplates/boards/company_goal_and_okrs.png
+      channel: channel-1674845108569
   - integration:
       id: zoom
 ---
@@ -200,6 +281,10 @@ description:
     id: worktemplate.companywide.create_project.channel
     defaultMessage: >-
       Chat with your team about your new project and decide how you’re going to structure it, in a collaborative channel.
+  board:
+    id: worktemplate.companywide.create_project.board
+    defaultMessage: >-
+      Use a Kanban board to define and track your project tasks and progress.
   integration:
     id: worktemplate.companywide.create_project.integration
     defaultMessage: >-
@@ -211,6 +296,12 @@ content:
       illustration: >-
         /static/worktemplates/companywide/create_project/channel.png
       name: Create Project
+  - board:
+      id: board-1674851940548
+      template: a4ec399ab4f2088b1051c3cdf1dde4c3
+      name: Create Project
+      illustration: /static/worktemplates/boards/project_tasks.png
+      channel: channel-1674851940114
   - integration:
       id: jira
   - integration:
@@ -231,6 +322,10 @@ description:
     id: worktemplate.leadership.goals_and_okrs.channel
     defaultMessage: >-
       Chat about your goals and progress with your team, async or real-time, and stay up to date with changes in a single channel.
+  board:
+    id: worktemplate.leadership.goals_and_okrs.board
+    defaultMessage: >-
+      Track your team's progress toward organizational goals with the Goals and OKR board. Keep meetings on track with the Meeting Agenda board. 
   integration:
     id: worktemplate.leadership.goals_and_okrs.integration
     defaultMessage: >-
@@ -241,6 +336,12 @@ content:
       id: channel-1674845108569
       illustration: /static/worktemplates/leadership/goals_and_okrs/channel.png
       name: Goals and OKR
+  - board:
+      id: board-1674845139258
+      template: 7ba22ccfdfac391d63dea5c4b8cde0de
+      name: Goals and OKR
+      illustration: /static/worktemplates/boards/company_goal_and_okrs.png
+      channel: channel-1674845108569
   - integration:
       id: zoom
 
