Move ESLint to root package.json and update Boards Babel-ESLint plugin

--- a/webapp/channels/.eslintrc.json
+++ b/webapp/channels/.eslintrc.json
@@ -11,7 +11,7 @@
     "import",
     "cypress",
     "no-only-tests",
-    "@typescript-eslint",
+    "@typescript-eslint/eslint-plugin",
     "formatjs"
   ],
   "parser": "@typescript-eslint/parser",
