--- a/webapp/boards/.eslintrc.json
+++ b/webapp/boards/.eslintrc.json
@@ -4,7 +4,7 @@
   ],
   "plugins": [
     "react",
-    "babel",
+    "@babel/eslint-plugin",
     "import",
     "no-only-tests",
     "header",
@@ -29,7 +29,7 @@
     ],
     "max-lines": "off",
     "no-unused-expressions": 0,
-    "babel/no-unused-expressions": [
+    "@babel/no-unused-expressions": [
       2,
       {
         "allowShortCircuit": true
