--- a/webapp/boards/package.json
+++ b/webapp/boards/package.json
@@ -68,6 +68,7 @@
 	"devDependencies": {
 		"@babel/cli": "7.17.6",
 		"@babel/core": "7.17.8",
+		"@babel/eslint-plugin": "7.19.1",
 		"@babel/plugin-proposal-class-properties": "7.16.7",
 		"@babel/plugin-proposal-object-rest-spread": "7.17.3",
 		"@babel/plugin-proposal-optional-chaining": "7.16.7",
@@ -104,10 +105,8 @@
 		"@types/redux-mock-store": "1.0.3",
 		"@typescript-eslint/eslint-plugin": "5.16.0",
 		"@typescript-eslint/parser": "5.16.0",
-		"babel-eslint": "10.1.0",
 		"cross-env": "^7.0.3",
 		"css-loader": "6.7.1",
-		"eslint": "^8.11.0",
 		"eslint-import-resolver-webpack": "0.13.2",
 		"eslint-plugin-babel": "^5.3.1",
 		"eslint-plugin-formatjs": "4.9.0",
