--- a/webapp/channels/.eslintrc.json
+++ b/webapp/channels/.eslintrc.json
@@ -5,7 +5,7 @@
     "plugin:react-hooks/recommended"
   ],
   "plugins": [
-    "@babel/eslint-plugin",
+    "@babel",
     "mattermost",
     "import",
     "no-only-tests",
