--- a/.github/workflows/webapp-boards.yml
+++ b/.github/workflows/webapp-boards.yml
@@ -1,4 +1,4 @@
-name: Boards
+name: Boards Web App
 
 on:
   pull_request:
@@ -18,6 +18,7 @@ concurrency:
 
 jobs:
   web-app-ci:
+    name: ''
     uses: ./.github/workflows/webapp-shared.yml
     with:
       workspace-argument: --workspace=boards
