--- a/.github/workflows/webapp-channels.yml
+++ b/.github/workflows/webapp-channels.yml
@@ -1,4 +1,4 @@
-name: Channels
+name: Channels Web App
 
 on:
   pull_request:
@@ -18,6 +18,7 @@ concurrency:
 
 jobs:
   web-app-ci:
+    name: ''
     uses: ./.github/workflows/webapp-shared.yml
     with:
       workspace-argument: --workspace=channels --workspace=platform/client --workspace=platform/components --workspace=platform/types --if-present
