--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@mattermost/webapp",
   "private": true,
+  "engines": {
+    "node": "16.10.0",
+    "npm": "7.24.0"
+  },
   "scripts": {
     "postinstall": "node scripts/skip_integrity_check.js && npm run build --workspace=platform/types --workspace=platform/client --workspace=platform/components",
     "build": "node scripts/build.js",
