--- a/webapp/playbooks/package.json
+++ b/webapp/playbooks/package.json
@@ -1,6 +1,7 @@
 {
   "name": "playbooks",
   "private": true,
+  "version": "1.36.0",
   "engines": {
     "npm": ">=7.0.0",
     "node": ">=16.4.0"
