--- a/.github/workflows/webapp-boards.yml
+++ b/.github/workflows/webapp-boards.yml
@@ -1,4 +1,4 @@
-name: Boards Web App
+name: Boards
 
 on:
   pull_request:
@@ -17,8 +17,7 @@ concurrency:
   cancel-in-progress: ${{ !contains( github.ref , 'heads/ref/master') }}
 
 jobs:
-  web-app-ci:
-    name: ''
+  web-app:
     uses: ./.github/workflows/webapp-shared.yml
     with:
       workspace-argument: --workspace=boards
