--- a/.github/workflows/webapp-channels.yml
+++ b/.github/workflows/webapp-channels.yml
@@ -1,4 +1,4 @@
-name: Channels Web App
+name: Channels
 
 on:
   pull_request:
@@ -17,8 +17,7 @@ concurrency:
   cancel-in-progress: ${{ !contains( github.ref , 'heads/ref/master') }}
 
 jobs:
-  web-app-ci:
-    name: ''
+  web-app:
     uses: ./.github/workflows/webapp-shared.yml
     with:
       workspace-argument: --workspace=channels --workspace=platform/client --workspace=platform/components --workspace=platform/types --if-present
