Apply path filters to test push

--- a/.github/workflows/webapp-boards.yml
+++ b/.github/workflows/webapp-boards.yml
@@ -11,6 +11,9 @@ on:
       - cloud
       - release-*
       - hh_webapp-ci
+    paths:
+      - 'webapp/boards/**/*'
+      - 'webapp/platform/**/*'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
