--- a/webapp/channels/package.json
+++ b/webapp/channels/package.json
@@ -34,6 +34,7 @@
     "core-js": "3.26.0",
     "country-list": "2.2.0",
     "crypto-browserify": "3.12.0",
+    "crypto-js": "4.1.1",
     "css-vars-ponyfill": "2.4.8",
     "date-fns": "2.29.3",
     "dynamic-virtualized-list": "github:mattermost/dynamic-virtualized-list#1c330717d6778315a40e70137ace38247c6a1d0f",
