--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     "chalk": "4.1.2",
     "concurrently": "7.6.0",
     "eslint": "8.37.0",
+    "eslint-plugin-formatjs": "4.9.1",
     "strip-ansi": "6.0.1"
   },
   "workspaces": [
