--- a/webapp/playbooks/package.json
+++ b/webapp/playbooks/package.json
@@ -28,7 +28,7 @@
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "1.2.6",
-    "react-intl": "5.24.1",
+    "react-intl": "6.3.2",
     "react-redux": "7.2.6",
     "react-router-dom": "5.3.4",
     "react-router-hash-link": "2.4.3",
@@ -122,7 +122,7 @@
     "test:watch": "jest --watch",
     "test-ci": "jest --ci --forceExit --detectOpenHandles --maxWorkers=100%",
     "check-types": "tsc -b",
-    "extract": "formatjs extract 'src/**/*.{ts,tsx}' --out-file i18n/temp.json --id-interpolation-pattern '[sha512:contenthash:base64:6]' && formatjs compile 'i18n/temp.json' --out-file i18n/en.json && rm i18n/temp.json",
+    "extract": "formatjs extract 'src/**/*.{ts,tsx}' --ignore \"**/*.d.ts\" --out-file i18n/temp.json --id-interpolation-pattern '[sha512:contenthash:base64:6]' && formatjs compile 'i18n/temp.json' --out-file i18n/en.json && rm i18n/temp.json",
     "graphql": "graphql-codegen --config graphql_gen.ts",
     "report-unused-exports": "ts-prune",
     "build:product": "webpack --mode=production",
