--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,10 +13,13 @@
     "clean": "npm run clean --workspaces --if-present"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
     "blessed": "0.1.81",
     "chalk": "4.1.2",
     "concurrently": "7.6.0",
     "eslint": "8.37.0",
+    "eslint-plugin-react": "7.32.2",
     "strip-ansi": "6.0.1"
   },
   "workspaces": [
