--- a/webapp/boards/package.json
+++ b/webapp/boards/package.json
@@ -58,7 +58,7 @@
 		"react-dom": "17.0.2",
 		"react-hot-keys": "^2.7.1",
 		"react-hotkeys-hook": "^3.4.4",
-		"react-intl": "6.3.2",
+		"react-intl": "*",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-select": "5.5.9",
