--- a/webapp/playbooks/package.json
+++ b/webapp/playbooks/package.json
@@ -28,7 +28,7 @@
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "1.2.6",
-    "react-intl": "6.3.2",
+    "react-intl": "*",
     "react-redux": "7.2.6",
     "react-router-dom": "5.3.4",
     "react-router-hash-link": "2.4.3",
