--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
   },
   "workspaces": [
     "channels",
+    "platform/compass-ui",
     "platform/client",
     "platform/components",
     "platform/types",
