--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,4 @@
+/plugin/ @mattermost/integrations
 /.github/workflows/channels-ci.yml @mattermost/web-platform
 /webapp/package.json @mattermost/web-platform
 /webapp/channels/package.json @mattermost/web-platform
