--- a/.github/workflows/esrupgrade-common.yml
+++ b/.github/workflows/esrupgrade-common.yml
@@ -19,7 +19,7 @@ env:
   DUMP_SCRIPT_NAME: esr.${{ inputs.initial-version }}-${{ inputs.final-version }}.dump.script.sql
   MIGRATION_SCRIPT: esr.${{ inputs.initial-version }}-${{ inputs.final-version }}.mysql.up.sql
   CLEANUP_SCRIPT:   esr.${{ inputs.initial-version }}-${{ inputs.final-version }}.mysql.cleanup.sql
-  PREPROCESS_SCRIPT:   esr.${{ inputs.initial-version }}-${{ inputs.final-version }}.mysql.preprocess.sql
+  PREPROCESS_SCRIPT: esr.common.mysql.preprocess.sql
   DIFF_NAME: esr.${{ inputs.initial-version }}-${{ inputs.final-version }}.diff
 jobs:
   esr-upgrade-server:
@@ -43,7 +43,7 @@ jobs:
       - name: Initialize the database with the source DB dump
         run: |
           curl ${{ inputs.db-dump-url }} | zcat | docker exec -i ghactions_mysql_1 mysql -AN $MYSQL_CONN_ARGS
-      - name: Preprocess the DB dump
+      - name: Common preprocessing of the DB dump
         run: |
           cd scripts/esrupgrades
           docker exec -i ghactions_mysql_1 mysql -AN $MYSQL_CONN_ARGS < $PREPROCESS_SCRIPT
