--- a/.github/workflows/esrupgrade.yml
+++ b/.github/workflows/esrupgrade.yml
@@ -9,6 +9,7 @@ on:
       - master
       - cloud
       - release-*
+      - generalize.test
 jobs:
   esr-upgrade-5_37-7_8:
     name: Run ESR upgrade script from 5.37 to 7.8
