--- a/webapp/channels/package.json
+++ b/webapp/channels/package.json
@@ -156,7 +156,6 @@
     "babel-plugin-typescript-to-proptypes": "1.4.2",
     "bundle-loader": "0.2.0",
     "copy-webpack-plugin": "11.0.0",
-    "cross-env": "7.0.3",
     "css-loader": "5.2.6",
     "dotenv-webpack": "8.0.1",
     "enzyme": "3.11.0",
@@ -216,15 +215,13 @@
     "build": "cross-env NODE_ENV=production webpack",
     "run": "webpack --progress --watch",
     "dev-server": "webpack serve --mode development",
-    "test": "cross-env TZ=Etc/UTC jest --maxWorkers=50%",
+    "test": "cross-env TZ=Etc/UTC jest",
+    "test:watch": "cross-env TZ=Etc/UTC jest --watch",
+    "test:updatesnapshot": "cross-env TZ=Etc/UTC jest --updateSnapshot",
+    "test:debug": "cross-env TZ=Etc/UTC jest --forceExit --detectOpenHandles --verbose",
     "test-ci": "cross-env TZ=Etc/UTC jest --ci --maxWorkers=100%",
     "clean": "rm -rf dist node_modules .eslintcache .stylelintcache tsconfig.tsbuildinfo",
     "stats": "cross-env NODE_ENV=production webpack --profile --json > webpack_stats.json",
-    "updatesnapshot": "cross-env TZ=Etc/UTC jest --updateSnapshot",
-    "test:debug": "cross-env TZ=Etc/UTC jest --forceExit --detectOpenHandles",
-    "test:speed": "cross-env TZ=Etc/UTC jest",
-    "test:watch": "cross-env TZ=Etc/UTC jest --watch",
-    "test:coverage": "cross-env TZ=Etc/UTC jest --coverage",
     "mmjstool": "mmjstool",
     "i18n-extract": "npm run mmjstool -- i18n extract-webapp --webapp-dir ./src",
     "i18n-clean-empty": "npm run mmjstool -- i18n clean-empty --webapp-dir ./src",
