--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "blessed": "0.1.81",
     "chalk": "4.1.2",
     "concurrently": "7.6.0",
+    "cross-env": "7.0.3",
     "eslint": "8.37.0",
     "strip-ansi": "6.0.1"
   },
