--- a/webapp/playbooks/package.json
+++ b/webapp/playbooks/package.json
@@ -119,9 +119,11 @@
     "dev-server": "webpack serve --mode=development",
     "check": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --cache",
     "fix": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --fix --cache",
-    "test": "jest --forceExit --detectOpenHandles --verbose",
-    "test:watch": "jest --watch",
-    "test-ci": "jest --ci --forceExit --detectOpenHandles --maxWorkers=100%",
+    "test": "cross-env TZ=Etc/UTC jest",
+    "test:watch": "cross-env TZ=Etc/UTC jest --watch",
+    "test:updatesnapshot": "cross-env TZ=Etc/UTC jest --updateSnapshot",
+    "test:debug": "cross-env TZ=Etc/UTC jest --forceExit --detectOpenHandles --verbose",
+    "test-ci": "cross-env TZ=Etc/UTC jest --ci --maxWorkers=100%",
     "check-types": "tsc -b",
     "extract": "formatjs extract 'src/**/*.{ts,tsx}' --out-file i18n/temp.json --id-interpolation-pattern '[sha512:contenthash:base64:6]' && formatjs compile 'i18n/temp.json' --out-file i18n/en.json && rm i18n/temp.json",
     "graphql": "graphql-codegen --config graphql_gen.ts",
