MM-51974 : Unify "react-intl" related dependencies versions across products (#22894)
Picks out formatjs-eslint-plugin to webapp root. Updates react-intl to 6.3.2 in all products. Executed i18n-extract and checked if any translations got changed. Although it was a major version update, the only breaking change was for a vue peer dependency. Adds "*" to take whatever dependency rule to products and declare the react-intl as the root package. Fixes a few lint and type errors cropped in due to the update No-ID rule removed from playbooks in preparation for unifying practices across products. Lastly, a few missing translations in Playbooks added

--- a/webapp/channels/package.json
+++ b/webapp/channels/package.json
@@ -70,7 +70,7 @@
     "react-day-picker": "8.3.6",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
-    "react-intl": "5.20.10",
+    "react-intl": "*",
     "react-is": "17.0.2",
     "react-overlays": "0.9.3",
     "react-popper": "2.3.0",
@@ -162,7 +162,6 @@
     "enzyme-adapter-react-17-updated": "1.0.2",
     "enzyme-to-json": "3.6.2",
     "eslint-import-resolver-webpack": "0.13.2",
-    "eslint-plugin-formatjs": "4.9.1",
     "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-mattermost": "github:mattermost/eslint-plugin-mattermost#5b0c972eacf19286e4c66221b39113bf8728a99e",
