--- a/webapp/channels/package.json
+++ b/webapp/channels/package.json
@@ -222,6 +222,7 @@
     "clean": "rm -rf dist node_modules .eslintcache .stylelintcache tsconfig.tsbuildinfo",
     "stats": "cross-env NODE_ENV=production webpack --profile --json > webpack_stats.json",
     "mmjstool": "mmjstool",
+    "i18n-extract1": "formatjs extract \"src/**/*.{ts,tsx}\" --ignore \"**/*.d.ts\" --additional-function-names ['$t'] --format simple --out-file i18n/TEMPPP.json",
     "i18n-extract": "npm run mmjstool -- i18n extract-webapp --webapp-dir ./src",
     "i18n-clean-empty": "npm run mmjstool -- i18n clean-empty --webapp-dir ./src",
     "i18n-check-empty-src": "npm run mmjstool -- i18n check-empty-src --webapp-dir ./src",
