--- a/server/channels/app/worktemplates/templates.yaml
+++ b/server/channels/app/worktemplates/templates.yaml
@@ -45,8 +45,10 @@ content:
       illustration: "/static/worktemplates/playbooks/product_release.png"
   - integration:
       id: jira
+      recommended: true
   - integration:
       id: github
+      recommended: true
 ---
 id: 'product_teams/goals_and_okrs:v1'
 category: product_teams
@@ -86,7 +88,7 @@ content:
       channel: channel-1674845108569
   - integration:
       id: zoom
-
+      recommended: true
 ---
 id: 'product_teams/bug_bash:v1'
 category: product_teams
@@ -120,6 +122,7 @@ content:
       playbook: playbook-1674844017943
   - integration:
       id: jira
+      recommended: true
 ---
 id: 'product_teams/sprint_planning:v1'
 category: product_teams
@@ -153,6 +156,7 @@ content:
       channel: channel-1674850783500
   - integration:
       id: zoom
+      recommended: true
 ---
 id: 'product_teams/product_roadmap:v1'
 category: product_teams
@@ -282,6 +286,7 @@ content:
       channel: channel-1674845108569
   - integration:
       id: zoom
+      recommended: true
 ---
 id: 'companywide/create_project:v1'
 category: companywide
@@ -316,10 +321,13 @@ content:
       channel: channel-1674851940114
   - integration:
       id: jira
+      recommended: true
   - integration:
       id: github
+      recommended: true
   - integration:
       id: zoom
+      recommended: true
 ---
 ######################
 # Leadership
@@ -356,4 +364,4 @@ content:
       channel: channel-1674845108569
   - integration:
       id: zoom
-
+      recommended: true
