Fix trigger path for CI

--- a/.github/workflows/esrupgrade.yml
+++ b/.github/workflows/esrupgrade.yml
@@ -2,7 +2,7 @@ name: ESR Upgrade
 on:
   pull_request:
     paths:
-      - 'scripts/esrupgrades/*'
+      - 'server/scripts/esrupgrades/*'
       - '.github/workflows/esr*'
   push:
     branches:
