--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -109,8 +109,7 @@ jobs:
   sentry:
     name: Send build info to sentry
     if: >
-      github.event.workflow_run.event == 'push' &&
-      github.event.workflow_run.conclusion == 'success'
+      github.event.workflow_run.event == 'push'
     runs-on: ubuntu-22.04
     env:
       SENTRY_AUTH_TOKEN: ${{ secrets.MM_SERVER_SENTRY_AUTH_TOKEN }}
